# JetNavTwin_PJT

./: .gitignore  CMakeLists.txt  Chatgpt_Prompt.txt  Dockerfile  README.md  Servos.h  color_tracker.cpp  game4.h  gametest.cpp  index.html  jetank_gamepad.cpp  package.json  server.js  socket.js
.github/workflows/: deploy.yml
cmake/: jetson-toolchain.cmake
include/: example.hpp
mqtt/mqttC/test_pub/: CMakeLists.txt  main.c
mqtt/mqttC/test_sub/: CMakeLists.txt  main.c
mqtt/mqttCXX/jetbotMQTT/: .gitignore  CMakeLists.txt
mqtt/mqttCXX/jetbotMQTT/include/Jetank/: motors.h
mqtt/mqttCXX/jetbotMQTT/src/: main.cpp
mqtt/mqttCXX/testPub/: main.cpp
mqtt/mqttCXX/testSub/: CMakeLists.txt  main.cpp
mqtt/mqttInstall/: install_paho_mqtt.sh  uninstall_paho_mqtt.sh
mqtt_union_cpp/: CMakeLists.txt.txt  README.md  cross_CMakeLists.txt  exefile
mqtt_union_cpp/include/: Servos.h  autonomous_controller.h  battery_monitor.h  camera_manager.h  color_detector.h  game5.h  motors.h  mqtt_controller.h  system_controller.h
mqtt_union_cpp/src/: color_detector.cpp  main.cpp
pyqt/: .env.example  .gitignore  AWSManager.py  Base64ImageProcessor.py  FirebaseManager.py  OpenAIManager.py  Readme.md  firebase-service-account.json.example  form.ui  mainwindow.py  mqtt_gui.pyproject  ui_form.py
road_following/: compile.sh  main.cpp  motors.h
src/: CMakeLists.txt  main.cpp
src/components/: AGVStatus.vue  DataAnalytics.vue  ThreeScene.vue
src/firebase/: config.js
src/router/: index.js
src/stores/: websocket.js
src/utils/: dateUtils.js
src/views/: AGVMonitor.vue  DataAnalyticsPage.vue
union_cpp/: CMakeLists.txt
union_cpp/include/: autonomous_controller.h  color_detector.h  game5.h  system_controller.h
union_cpp/src/: autonomous_controller.cpp  color_detector.cpp  main.cpp  system_controller.cpp
web/: README.md  package-lock.json  server.js  socket.js
web/src/: App.vue
web/src/assets/: base.css  main.css
web/src/components/: AGVStatus.vue  ThreeScene.vue
web/src/views/: AGVMonitor.vue
